TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declist start funlist entrypoint stmtlist
Rule 2     start -> <empty>
Rule 3     entrypoint -> <empty>
Rule 4     fun -> DEF fun_name ( funargs ) ftype { stmtlist }
Rule 5     fun_name -> ID
Rule 6     ftype -> type
Rule 7     stmt -> PRINT ( expr ) ;
Rule 8     stmt -> PRINTLN ( ) ;
Rule 9     stmt -> PRINTLN ( expr ) ;
Rule 10    stmt -> WHILE new_label ( expr ) jz block
Rule 11    stmt -> IF ( expr ) jz block
Rule 12    stmt -> IF ( expr ) jz block ELSE jmp jz_label block
Rule 13    jmp -> <empty>
Rule 14    jz -> <empty>
Rule 15    jz_label -> <empty>
Rule 16    new_label -> <empty>
Rule 17    var_declare -> VAR ID [ NUM ] type ;
Rule 18    var_declare -> VAR ID [ NUM ] [ NUM ] type ;
Rule 19    var_declare -> VAR ID type = expr ;
Rule 20    var_declare -> VAR ID type ;
Rule 21    stmt -> ID = expr ;
Rule 22    stmt -> expr [ expr ] = expr ;
Rule 23    stmt -> RETURN expr ;
Rule 24    stmt -> RETURN ;
Rule 25    stmt -> expr ;
Rule 26    expr -> INPUT ( )
Rule 27    expr -> STRINGTYPE ( expr )
Rule 28    expr -> INTTYPE ( expr )
Rule 29    expr -> FLOATTYPE ( expr )
Rule 30    expr -> expr + expr
Rule 31    expr -> expr - expr
Rule 32    expr -> expr * expr
Rule 33    expr -> expr / expr
Rule 34    expr -> expr > expr
Rule 35    expr -> expr < expr
Rule 36    expr -> expr GTE expr
Rule 37    expr -> expr LTE expr
Rule 38    expr -> expr EQ expr
Rule 39    expr -> expr NEQ expr
Rule 40    expr -> expr % expr
Rule 41    expr -> expr AND expr
Rule 42    expr -> expr OR expr
Rule 43    expr -> expr $ expr
Rule 44    expr -> ! expr
Rule 45    expr -> - expr
Rule 46    expr -> ID
Rule 47    expr -> expr [ expr ]
Rule 48    expr -> STRING
Rule 49    expr -> NUM
Rule 50    expr -> FLOAT
Rule 51    expr -> ID ( fcall )
Rule 52    expr -> ( expr )
Rule 53    type -> STRINGTYPE
Rule 54    type -> INTTYPE
Rule 55    type -> VOIDTYPE
Rule 56    type -> FLOATTYPE
Rule 57    type -> type [ ]
Rule 58    declist -> declist var_declare
Rule 59    declist -> <empty>
Rule 60    funlist -> funlist fun
Rule 61    funlist -> <empty>
Rule 62    stmtlist -> stmtlist stmt
Rule 63    stmtlist -> <empty>
Rule 64    funargs -> idlist
Rule 65    funargs -> <empty>
Rule 66    idlist -> idlist , ID type
Rule 67    idlist -> ID type
Rule 68    fcall -> exprlist
Rule 69    fcall -> <empty>
Rule 70    exprlist -> exprlist , expr
Rule 71    exprlist -> expr
Rule 72    block -> { stmtlist }
Rule 73    block -> stmt

Terminals, with rules where they appear

!                    : 44
$                    : 43
%                    : 40
(                    : 4 7 8 9 10 11 12 26 27 28 29 51 52
)                    : 4 7 8 9 10 11 12 26 27 28 29 51 52
*                    : 32
+                    : 30
,                    : 66 70
-                    : 31 45
/                    : 33
;                    : 7 8 9 17 18 19 20 21 22 23 24 25
<                    : 35
=                    : 19 21 22
>                    : 34
AND                  : 41
DEF                  : 4
ELSE                 : 12
EQ                   : 38
FLOAT                : 50
FLOATTYPE            : 29 56
GTE                  : 36
ID                   : 5 17 18 19 20 21 46 51 66 67
IF                   : 11 12
INPUT                : 26
INTTYPE              : 28 54
LTE                  : 37
NEQ                  : 39
NUM                  : 17 18 18 49
OR                   : 42
PRINT                : 7
PRINTLN              : 8 9
RETURN               : 23 24
STRING               : 48
STRINGTYPE           : 27 53
VAR                  : 17 18 19 20
VOIDTYPE             : 55
WHILE                : 10
[                    : 17 18 18 22 47 57
]                    : 17 18 18 22 47 57
error                : 
{                    : 4 72
}                    : 4 72

Nonterminals, with rules where they appear

block                : 10 11 12 12
declist              : 1 58
entrypoint           : 1
expr                 : 7 9 10 11 12 19 21 22 22 22 23 25 27 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 45 47 47 52 70 71
exprlist             : 68 70
fcall                : 51
ftype                : 4
fun                  : 60
fun_name             : 4
funargs              : 4
funlist              : 1 60
idlist               : 64 66
jmp                  : 12
jz                   : 10 11 12
jz_label             : 12
new_label            : 10
program              : 0
start                : 1
stmt                 : 62 73
stmtlist             : 1 4 62 72
type                 : 6 17 18 19 20 57 66 67
var_declare          : 58

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist start funlist entrypoint stmtlist
    (58) declist -> . declist var_declare
    (59) declist -> .

    VAR             reduce using rule 59 (declist -> .)
    DEF             reduce using rule 59 (declist -> .)
    PRINT           reduce using rule 59 (declist -> .)
    PRINTLN         reduce using rule 59 (declist -> .)
    WHILE           reduce using rule 59 (declist -> .)
    IF              reduce using rule 59 (declist -> .)
    ID              reduce using rule 59 (declist -> .)
    RETURN          reduce using rule 59 (declist -> .)
    INPUT           reduce using rule 59 (declist -> .)
    STRINGTYPE      reduce using rule 59 (declist -> .)
    INTTYPE         reduce using rule 59 (declist -> .)
    FLOATTYPE       reduce using rule 59 (declist -> .)
    !               reduce using rule 59 (declist -> .)
    -               reduce using rule 59 (declist -> .)
    STRING          reduce using rule 59 (declist -> .)
    NUM             reduce using rule 59 (declist -> .)
    FLOAT           reduce using rule 59 (declist -> .)
    (               reduce using rule 59 (declist -> .)
    $end            reduce using rule 59 (declist -> .)

    program                        shift and go to state 1
    declist                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . start funlist entrypoint stmtlist
    (58) declist -> declist . var_declare
    (2) start -> .
    (17) var_declare -> . VAR ID [ NUM ] type ;
    (18) var_declare -> . VAR ID [ NUM ] [ NUM ] type ;
    (19) var_declare -> . VAR ID type = expr ;
    (20) var_declare -> . VAR ID type ;

    DEF             reduce using rule 2 (start -> .)
    PRINT           reduce using rule 2 (start -> .)
    PRINTLN         reduce using rule 2 (start -> .)
    WHILE           reduce using rule 2 (start -> .)
    IF              reduce using rule 2 (start -> .)
    ID              reduce using rule 2 (start -> .)
    RETURN          reduce using rule 2 (start -> .)
    INPUT           reduce using rule 2 (start -> .)
    STRINGTYPE      reduce using rule 2 (start -> .)
    INTTYPE         reduce using rule 2 (start -> .)
    FLOATTYPE       reduce using rule 2 (start -> .)
    !               reduce using rule 2 (start -> .)
    -               reduce using rule 2 (start -> .)
    STRING          reduce using rule 2 (start -> .)
    NUM             reduce using rule 2 (start -> .)
    FLOAT           reduce using rule 2 (start -> .)
    (               reduce using rule 2 (start -> .)
    $end            reduce using rule 2 (start -> .)
    VAR             shift and go to state 5

    start                          shift and go to state 3
    var_declare                    shift and go to state 4

state 3

    (1) program -> declist start . funlist entrypoint stmtlist
    (60) funlist -> . funlist fun
    (61) funlist -> .

    DEF             reduce using rule 61 (funlist -> .)
    PRINT           reduce using rule 61 (funlist -> .)
    PRINTLN         reduce using rule 61 (funlist -> .)
    WHILE           reduce using rule 61 (funlist -> .)
    IF              reduce using rule 61 (funlist -> .)
    ID              reduce using rule 61 (funlist -> .)
    RETURN          reduce using rule 61 (funlist -> .)
    INPUT           reduce using rule 61 (funlist -> .)
    STRINGTYPE      reduce using rule 61 (funlist -> .)
    INTTYPE         reduce using rule 61 (funlist -> .)
    FLOATTYPE       reduce using rule 61 (funlist -> .)
    !               reduce using rule 61 (funlist -> .)
    -               reduce using rule 61 (funlist -> .)
    STRING          reduce using rule 61 (funlist -> .)
    NUM             reduce using rule 61 (funlist -> .)
    FLOAT           reduce using rule 61 (funlist -> .)
    (               reduce using rule 61 (funlist -> .)
    $end            reduce using rule 61 (funlist -> .)

    funlist                        shift and go to state 6

state 4

    (58) declist -> declist var_declare .

    VAR             reduce using rule 58 (declist -> declist var_declare .)
    DEF             reduce using rule 58 (declist -> declist var_declare .)
    PRINT           reduce using rule 58 (declist -> declist var_declare .)
    PRINTLN         reduce using rule 58 (declist -> declist var_declare .)
    WHILE           reduce using rule 58 (declist -> declist var_declare .)
    IF              reduce using rule 58 (declist -> declist var_declare .)
    ID              reduce using rule 58 (declist -> declist var_declare .)
    RETURN          reduce using rule 58 (declist -> declist var_declare .)
    INPUT           reduce using rule 58 (declist -> declist var_declare .)
    STRINGTYPE      reduce using rule 58 (declist -> declist var_declare .)
    INTTYPE         reduce using rule 58 (declist -> declist var_declare .)
    FLOATTYPE       reduce using rule 58 (declist -> declist var_declare .)
    !               reduce using rule 58 (declist -> declist var_declare .)
    -               reduce using rule 58 (declist -> declist var_declare .)
    STRING          reduce using rule 58 (declist -> declist var_declare .)
    NUM             reduce using rule 58 (declist -> declist var_declare .)
    FLOAT           reduce using rule 58 (declist -> declist var_declare .)
    (               reduce using rule 58 (declist -> declist var_declare .)
    $end            reduce using rule 58 (declist -> declist var_declare .)


state 5

    (17) var_declare -> VAR . ID [ NUM ] type ;
    (18) var_declare -> VAR . ID [ NUM ] [ NUM ] type ;
    (19) var_declare -> VAR . ID type = expr ;
    (20) var_declare -> VAR . ID type ;

    ID              shift and go to state 7


state 6

    (1) program -> declist start funlist . entrypoint stmtlist
    (60) funlist -> funlist . fun
    (3) entrypoint -> .
    (4) fun -> . DEF fun_name ( funargs ) ftype { stmtlist }

    PRINT           reduce using rule 3 (entrypoint -> .)
    PRINTLN         reduce using rule 3 (entrypoint -> .)
    WHILE           reduce using rule 3 (entrypoint -> .)
    IF              reduce using rule 3 (entrypoint -> .)
    ID              reduce using rule 3 (entrypoint -> .)
    RETURN          reduce using rule 3 (entrypoint -> .)
    INPUT           reduce using rule 3 (entrypoint -> .)
    STRINGTYPE      reduce using rule 3 (entrypoint -> .)
    INTTYPE         reduce using rule 3 (entrypoint -> .)
    FLOATTYPE       reduce using rule 3 (entrypoint -> .)
    !               reduce using rule 3 (entrypoint -> .)
    -               reduce using rule 3 (entrypoint -> .)
    STRING          reduce using rule 3 (entrypoint -> .)
    NUM             reduce using rule 3 (entrypoint -> .)
    FLOAT           reduce using rule 3 (entrypoint -> .)
    (               reduce using rule 3 (entrypoint -> .)
    $end            reduce using rule 3 (entrypoint -> .)
    DEF             shift and go to state 10

    entrypoint                     shift and go to state 8
    fun                            shift and go to state 9

state 7

    (17) var_declare -> VAR ID . [ NUM ] type ;
    (18) var_declare -> VAR ID . [ NUM ] [ NUM ] type ;
    (19) var_declare -> VAR ID . type = expr ;
    (20) var_declare -> VAR ID . type ;
    (53) type -> . STRINGTYPE
    (54) type -> . INTTYPE
    (55) type -> . VOIDTYPE
    (56) type -> . FLOATTYPE
    (57) type -> . type [ ]

    [               shift and go to state 11
    STRINGTYPE      shift and go to state 13
    INTTYPE         shift and go to state 14
    VOIDTYPE        shift and go to state 15
    FLOATTYPE       shift and go to state 16

    type                           shift and go to state 12

state 8

    (1) program -> declist start funlist entrypoint . stmtlist
    (62) stmtlist -> . stmtlist stmt
    (63) stmtlist -> .

    PRINT           reduce using rule 63 (stmtlist -> .)
    PRINTLN         reduce using rule 63 (stmtlist -> .)
    WHILE           reduce using rule 63 (stmtlist -> .)
    IF              reduce using rule 63 (stmtlist -> .)
    ID              reduce using rule 63 (stmtlist -> .)
    RETURN          reduce using rule 63 (stmtlist -> .)
    INPUT           reduce using rule 63 (stmtlist -> .)
    STRINGTYPE      reduce using rule 63 (stmtlist -> .)
    INTTYPE         reduce using rule 63 (stmtlist -> .)
    FLOATTYPE       reduce using rule 63 (stmtlist -> .)
    !               reduce using rule 63 (stmtlist -> .)
    -               reduce using rule 63 (stmtlist -> .)
    STRING          reduce using rule 63 (stmtlist -> .)
    NUM             reduce using rule 63 (stmtlist -> .)
    FLOAT           reduce using rule 63 (stmtlist -> .)
    (               reduce using rule 63 (stmtlist -> .)
    $end            reduce using rule 63 (stmtlist -> .)

    stmtlist                       shift and go to state 17

state 9

    (60) funlist -> funlist fun .

    DEF             reduce using rule 60 (funlist -> funlist fun .)
    PRINT           reduce using rule 60 (funlist -> funlist fun .)
    PRINTLN         reduce using rule 60 (funlist -> funlist fun .)
    WHILE           reduce using rule 60 (funlist -> funlist fun .)
    IF              reduce using rule 60 (funlist -> funlist fun .)
    ID              reduce using rule 60 (funlist -> funlist fun .)
    RETURN          reduce using rule 60 (funlist -> funlist fun .)
    INPUT           reduce using rule 60 (funlist -> funlist fun .)
    STRINGTYPE      reduce using rule 60 (funlist -> funlist fun .)
    INTTYPE         reduce using rule 60 (funlist -> funlist fun .)
    FLOATTYPE       reduce using rule 60 (funlist -> funlist fun .)
    !               reduce using rule 60 (funlist -> funlist fun .)
    -               reduce using rule 60 (funlist -> funlist fun .)
    STRING          reduce using rule 60 (funlist -> funlist fun .)
    NUM             reduce using rule 60 (funlist -> funlist fun .)
    FLOAT           reduce using rule 60 (funlist -> funlist fun .)
    (               reduce using rule 60 (funlist -> funlist fun .)
    $end            reduce using rule 60 (funlist -> funlist fun .)


state 10

    (4) fun -> DEF . fun_name ( funargs ) ftype { stmtlist }
    (5) fun_name -> . ID

    ID              shift and go to state 19

    fun_name                       shift and go to state 18

state 11

    (17) var_declare -> VAR ID [ . NUM ] type ;
    (18) var_declare -> VAR ID [ . NUM ] [ NUM ] type ;

    NUM             shift and go to state 20


state 12

    (19) var_declare -> VAR ID type . = expr ;
    (20) var_declare -> VAR ID type . ;
    (57) type -> type . [ ]

    =               shift and go to state 21
    ;               shift and go to state 22
    [               shift and go to state 23


state 13

    (53) type -> STRINGTYPE .

    =               reduce using rule 53 (type -> STRINGTYPE .)
    ;               reduce using rule 53 (type -> STRINGTYPE .)
    [               reduce using rule 53 (type -> STRINGTYPE .)
    ,               reduce using rule 53 (type -> STRINGTYPE .)
    )               reduce using rule 53 (type -> STRINGTYPE .)
    {               reduce using rule 53 (type -> STRINGTYPE .)


state 14

    (54) type -> INTTYPE .

    =               reduce using rule 54 (type -> INTTYPE .)
    ;               reduce using rule 54 (type -> INTTYPE .)
    [               reduce using rule 54 (type -> INTTYPE .)
    ,               reduce using rule 54 (type -> INTTYPE .)
    )               reduce using rule 54 (type -> INTTYPE .)
    {               reduce using rule 54 (type -> INTTYPE .)


state 15

    (55) type -> VOIDTYPE .

    =               reduce using rule 55 (type -> VOIDTYPE .)
    ;               reduce using rule 55 (type -> VOIDTYPE .)
    [               reduce using rule 55 (type -> VOIDTYPE .)
    ,               reduce using rule 55 (type -> VOIDTYPE .)
    )               reduce using rule 55 (type -> VOIDTYPE .)
    {               reduce using rule 55 (type -> VOIDTYPE .)


state 16

    (56) type -> FLOATTYPE .

    =               reduce using rule 56 (type -> FLOATTYPE .)
    ;               reduce using rule 56 (type -> FLOATTYPE .)
    [               reduce using rule 56 (type -> FLOATTYPE .)
    ,               reduce using rule 56 (type -> FLOATTYPE .)
    )               reduce using rule 56 (type -> FLOATTYPE .)
    {               reduce using rule 56 (type -> FLOATTYPE .)


state 17

    (1) program -> declist start funlist entrypoint stmtlist .
    (62) stmtlist -> stmtlist . stmt
    (7) stmt -> . PRINT ( expr ) ;
    (8) stmt -> . PRINTLN ( ) ;
    (9) stmt -> . PRINTLN ( expr ) ;
    (10) stmt -> . WHILE new_label ( expr ) jz block
    (11) stmt -> . IF ( expr ) jz block
    (12) stmt -> . IF ( expr ) jz block ELSE jmp jz_label block
    (21) stmt -> . ID = expr ;
    (22) stmt -> . expr [ expr ] = expr ;
    (23) stmt -> . RETURN expr ;
    (24) stmt -> . RETURN ;
    (25) stmt -> . expr ;
    (26) expr -> . INPUT ( )
    (27) expr -> . STRINGTYPE ( expr )
    (28) expr -> . INTTYPE ( expr )
    (29) expr -> . FLOATTYPE ( expr )
    (30) expr -> . expr + expr
    (31) expr -> . expr - expr
    (32) expr -> . expr * expr
    (33) expr -> . expr / expr
    (34) expr -> . expr > expr
    (35) expr -> . expr < expr
    (36) expr -> . expr GTE expr
    (37) expr -> . expr LTE expr
    (38) expr -> . expr EQ expr
    (39) expr -> . expr NEQ expr
    (40) expr -> . expr % expr
    (41) expr -> . expr AND expr
    (42) expr -> . expr OR expr
    (43) expr -> . expr $ expr
    (44) expr -> . ! expr
    (45) expr -> . - expr
    (46) expr -> . ID
    (47) expr -> . expr [ expr ]
    (48) expr -> . STRING
    (49) expr -> . NUM
    (50) expr -> . FLOAT
    (51) expr -> . ID ( fcall )
    (52) expr -> . ( expr )

    $end            reduce using rule 1 (program -> declist start funlist entrypoint stmtlist .)
    PRINT           shift and go to state 25
    PRINTLN         shift and go to state 28
    WHILE           shift and go to state 29
    IF              shift and go to state 30
    ID              shift and go to state 31
    RETURN          shift and go to state 32
    INPUT           shift and go to state 33
    STRINGTYPE      shift and go to state 34
    INTTYPE         shift and go to state 35
    FLOATTYPE       shift and go to state 36
    !               shift and go to state 38
    -               shift and go to state 37
    STRING          shift and go to state 39
    NUM             shift and go to state 40
    FLOAT           shift and go to state 41
    (               shift and go to state 26

    stmt                           shift and go to state 24
    expr                           shift and go to state 27

state 18

    (4) fun -> DEF fun_name . ( funargs ) ftype { stmtlist }

    (               shift and go to state 42


state 19

    (5) fun_name -> ID .

    (               reduce using rule 5 (fun_name -> ID .)


state 20

    (17) var_declare -> VAR ID [ NUM . ] type ;
    (18) var_declare -> VAR ID [ NUM . ] [ NUM ] type ;

    ]               shift and go to state 43


state 21
